--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>van-gogh-vr</title>
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
-  </body>
+  <div id="container"></div> <script type="module" src="/src/main.js"></script>
+</body>
 </html>
